Version - 1.0.1
First release

Version - 1.0.2
Changed
	Fix for log file. They will be created only if the workflow started.
	GNU/GPL-V3 statement added to the source code.
	Fix for job starting while 0th line in list specified.

Version - 1.0.3
Changed on Tue Feb 16 15:51:01 IST 2021
	Alertscreen to monitor Workflows
	notdone directory deletion fix
Changed on Wed Feb 24 08:56:11 IST 2021
	getcwd to print current working directory
Changed on Thu Mar  4 06:26:06 IST 2021
	minor changes to cleanup Script
	version number added in log file