@@ -3,4 +3,4 @@
 # Script to cleanup packages
 #
 rm -rf *log *done stdout stderr *.tar.gz
-#cd tests && rm -rf *log *done stdout stderr *.tar.gz
+cd tests && rm -rf *log *done stdout stderr *.tar.gz
